--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,11 @@ form {
 	box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
 	padding: 20px 30px;
 	box-sizing: border-box;
-}
+/*	margin: 0 10%;
+*/	
+	/*stacking fieldsets above each other*/
+/*	position: absolute;
+*/}
 
 .title  {
 	text-align: center;
